--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,64 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-     <link rel='stylesheet' href='/stylesheets/style.css' />
-     <meta charset="UTF-8">
-     <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link href="http://allfont.ru/allfont.css?fonts=pollock3ctt" rel="stylesheet" type="text/css" />
-     <title><%= title %></title>
-  </head>
-  <body>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-
-<script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
-<link rel="stylesheet"  type="text/css" href="/stylesheets/main.css">
-<script type="text/javascript">
- var selectedIngredients = [];
- function searchq(){
-	 var searchTxt = $("input[name='ingredient']").val();
-	 console.log(searchTxt);
-	 //if(searchTxt=="") searchTxt = "no";
-	 $.post("/search/ingredient", {val: searchTxt}, function(output) {
-		 $("#output").html(output);
-	 });
- }
-
- function addIngredient(ingr_name){
-	 console.log("oh wow!!");
-	 selectedIngredients.push(ingr_name);
-	 showList();
- }
-
- function deleteIngredient(ingr_id){
-	 selectedIngredients.splice(ingr_id,1);
-	 showList();
- }
-
- function showList(){
-	 if(!selectedIngredients.empty){
-		 var otpstring = "";
-		 for(var i = 0; i < selectedIngredients.length; i++){
-			 otpstring += "<div> <input type='button' value='-' onclick='deleteIngredient("+i+");' /> "+(i+1)+". "+selectedIngredients[i]+"</div>";
-		 }
-		 $("#selectedStuff").html(otpstring);
-	 }
- }
+  <%- include('header'); -%>
+ <script type="text/javascript">
+  $(document).ready(function() {
+      $('.select-ingredients-multiple').select2();
+  });
  </script>
-  <h1 style="font-size:100px; color: white; margin: 0;">HELPMEEAT</h1>
-  <input class="searchbar" onkeyup="searchq();" name="ingredient" type="text" id="ingred_input" autocomplete="off" placeholder="Введите ингредиент..."/>
-  <div class="ingred_result" id="output" >
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
+  <div class="container-fluid" >
+      <form class="container-sm" style="margin: 0 auto;" action="/search/ingredients" title="" method="post">
+      <div class="form-group">
+        <select class="select-ingredients-multiple" name="ingredients" multiple="multiple">
+          <%for(let i = 0; i < ingredients.length; i++){%>
+             <option value="<%=ingredients[i].id%>"><%=ingredients[i].title%></option>
+          <%}%>
+        </select>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти рецепт</button>
+      </div>
+      <form>
   </div>
-  <div style="margin-bottom: 5px;" id="selectedStuff"> </div>
-  <input class="search_button" type="button" value="Найти!"/>
-
 </body>
 </html>
 
